--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,4 +18,6 @@ target 'Bufunfa' do
   #     flipper_post_install(installer)
   #   end
   # end
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
 end
