About and Mercado Pago screens have been added

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "name": "Bufunfa",
     "slug": "Bufunfa",
     "version": "1.0.0",
+    "orientation": "portrait",
     "assetBundlePatterns": [
       "**/*"
     ]
