The following updates occurred: developer contact email; added a link to icons8.com; the WalletScreen screen has been added;

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-app-loading": "^1.0.3",
     "expo-clipboard": "~1.0.2",
     "expo-font": "^9.1.0",
+    "expo-linking": "~2.2.3",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
     "react": "16.13.1",
