Update the transactions provider.

--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-linking": "~2.2.3",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "nanoid": "^3.1.23",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
