chore: fix path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,11 @@
     "paths": {
       // This needs to be mirrored in babel.config.js
       // Components is a directory with sub directories
-      "components/*": ["src/components/*"],
       "components": ["src/components/index"],
-      "contexts/*": ["src/contexts/*"],
-      "contexts": ["src/contexts"],
-      "screens/*": ["src/screens/*"],
-      "screens": ["src/screens"],
-      "hooks/*": ["src/hooks/*"],
-      "hooks": ["src/hooks"]
+      "contexts": ["src/contexts/index"],
+      "screens": ["src/screens/index"],
+      "hooks": ["src/hooks/index"]
     }
-  }
+  },
+  "exclude": ["node_modules"]
 }
