--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
