--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.2",
@@ -19,6 +26,8 @@
     "expo-localization": "~13.0.0",
     "expo-status-bar": "~1.3.0",
     "i18n-js": "^4.1.1",
+    "jest": "^26.6.3",
+    "jest-expo": "^46.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -28,9 +37,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "^29.0.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-test-renderer": "17.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
   "private": true
