--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/react-native": "~0.66.13",
     "@types/react-test-renderer": "17.0.2",
     "babel-plugin-module-resolver": "^4.1.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "17.0.2",
     "typescript": "~4.3.5"
   },
