--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest-expo": "^46.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.36.1",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
